[workspace]
members = ["beluga-*"]
resolver = "2"

[workspace.package]
authors = [
    "Silvestr Predko <silvestr1994@gmail.com>",
    "Simon Berger <simon.berger@inomotech.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"
repository = "https://github.com/inomotech-foss/beluga"
publish = false

[workspace.dependencies]
beluga-mqtt = { path = "beluga-mqtt" }
beluga-ssh-service = { path = "beluga-ssh-service" }
beluga-tunnel = { path = "beluga-tunnel" }
bytes = "1"
rumqttc = "0.24"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
