[workspace]
members = ["beluga-*"]
resolver = "2"

[workspace.package]
authors = [
    "Silvestr Predko <silvestr1994@gmail.com>",
    "Simon Berger <simon.berger@inomotech.com>",
]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"
repository = "https://github.com/inomotech-foss/beluga"
publish = false

[workspace.dependencies]
beluga-mqtt = { path = "beluga-mqtt" }
beluga-ssh-service = { path = "beluga-ssh-service" }
beluga-tunnel = { path = "beluga-tunnel" }

anyhow = "1"
bytes = "1"
chrono = "0.4"
ciborium = "0.2"
futures = "0.3"
itertools = "0.14"
petname = "2"
prost = "0.13"
rand = "0.8"
rcgen = "0.13"
rumqttc = "0.24"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
thiserror = "2"
time = "0.3"
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"

[workspace.dependencies.rumqttd]
git = "https://github.com/inomotech-foss/rumqtt.git"
rev = "d39e1490831c41c90a12705b2a84df9b1a327ff6"
features = ["verify-client-cert"]
