[package]
name = "beluga-aws-sdk"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
beluga-mqtt.workspace = true
beluga-tunnel.workspace = true
beluga-ssh-service.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
rand.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util = { workspace = true, features = ["rt"] }

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"
