[package]
name = "beluga-aws-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
beluga-mqtt.workspace = true
beluga-ssh-service.workspace = true
beluga-tunnel.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
ciborium = { workspace = true, optional = true }
futures.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]

[dev-dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-runtime.workspace = true
aws-sdk-iotsecuretunneling.workspace = true
dotenvy.workspace = true
itertools.workspace = true
openssh.workspace = true
petname.workspace = true
rcgen.workspace = true
time.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]
default = []
cbor = ["dep:ciborium"]
