[package]
name = "beluga-mqtt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rumqttc.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]

[dev-dependencies]
anyhow = "1"
time = "0.3"
tracing-subscriber = "0.3"
tempfile = "3"
rumqttd = { git = "https://github.com/inomotech-foss/rumqtt.git", branch = "silvestr/graceful-shutdown", features = [
    "verify-client-cert",
] }
rcgen = "0.13"
rustls = "0.23"
