[package]
name = "beluga-mqtt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rumqttc.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]

[dev-dependencies]
anyhow.workspace = true
time.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
rumqttd.workspace = true
rcgen.workspace = true
rustls.workspace = true
