[package]
name = "beluga-mqtt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
rumqttc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]

[dev-dependencies]
anyhow.workspace = true
rcgen.workspace = true
rumqttd.workspace = true
rustls.workspace = true
tempfile.workspace = true
time.workspace = true
tracing-subscriber.workspace = true
