[package]
name = "beluga-ssh-service"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
beluga-tunnel = { path = "../beluga-tunnel" }

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]
