[package]
name = "beluga-ssh-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
beluga-tunnel.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]
