[package]
name = "beluga-tunnel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
prost.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]
