[package]
name = "beluga-tunnel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
prost.workspace = true
rustls.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]

[dependencies.tokio-tungstenite]
workspace = true
default-features = true
features = ["rustls-tls-webpki-roots"]
