[package]
name = "beluga"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rumqttc.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt", "net", "io-util", "sync"]
