[package]
name = "aws-c-cal-sys"
version = "0.1.0+v0.6.9"
links = "aws-c-cal"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-c-common-sys.workspace = true

[target.'cfg(windows)'.dependencies]
schannel.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
aws-lc-sys.workspace = true

[build-dependencies]
anyhow.workspace = true
aws-c-builder.workspace = true
