[package]
name = "aws-c-common-sys"
version = "0.1.0+v0.9.10"
links = "aws-c-common"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true

[build-dependencies]
aws-c-builder.workspace = true
