[package]
name = "aws-c-io-sys"
version = "0.1.0+v0.14.0"
links = "aws-c-io"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.aws-c-builder]
enable = true

[features]
enable-tracing = ["aws-c-common-sys/enable-tracing"]

[dependencies]
aws-c-cal-sys.workspace = true
aws-c-common-sys.workspace = true
libc.workspace = true

[target.'cfg(all(unix, not(target_vendor = "apple")))'.dependencies]
s2n-tls-sys.workspace = true

[build-dependencies]
aws-c-builder.workspace = true
