[package]
name = "aws-c-io-sys"
version = "0.1.0+v0.13.36"
links = "aws-c-io"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-c-cal-sys.workspace = true
aws-c-common-sys.workspace = true
libc.workspace = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
s2n-tls-sys.workspace = true

[build-dependencies]
anyhow.workspace = true
aws-c-builder.workspace = true
