[package]
name = "aws-c-sdkutils-sys"
version = "0.1.0+v0.1.13"
links = "aws-c-sdkutils"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.aws-c-builder]
enable = true

[features]
enable-tracing = ["aws-c-common-sys/enable-tracing"]

[dependencies]
aws-c-common-sys.workspace = true

[build-dependencies]
aws-c-builder.workspace = true
