[package]
name = "aws-crt-cpp-sys"
version = "0.1.0+v0.25.0"
links = "aws-crt-cpp"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-c-auth-sys.workspace = true
aws-c-cal-sys.workspace = true
aws-c-common-sys.workspace = true
aws-c-compression-sys.workspace = true
aws-c-event-stream-sys.workspace = true
aws-c-http-sys.workspace = true
aws-c-io-sys.workspace = true
aws-c-mqtt-sys.workspace = true
aws-c-s3-sys.workspace = true
aws-c-sdkutils-sys.workspace = true
aws-checksums-sys.workspace = true

[build-dependencies]
aws-c-builder.workspace = true
